fixed menu content problem on narrow width screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -212,6 +212,12 @@ main {
   column-span: all;
 }
 
+@media (max-width: 480px) {
+  .menu__burger-comment {
+    width: 12rem;
+  }
+}
+
 .location {
   white-space: pre;
 }
